--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,21 @@ services:
     build:
       context: .
       dockerfile: ./docker/node/Dockerfile
+    restart: always
     ports:
-      - 4000:4000
+      - ${PORT}:${PORT}
+    depends_on:
+      - database
+  database:
+    build:
+      context: .
+      dockerfile: ./docker/postgresql/Dockerfile
+    restart: always
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    env_file:
+      - .env
+    ports:
+      - ${DB_PORT}:5432
