WEEK-7. Update docker config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 PORT=4000
-DB_PORT=5432
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
@@ -10,3 +9,5 @@ TOKEN_REFRESH_EXPIRE_TIME=24h
 POSTGRES_DB=set_db_name
 POSTGRES_USER=set_username
 POSTGRES_PASSWORD=set_password
+POSTGRES_PORT=5432
+POSTGRES_HOST=database
