--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
-version: '3.6'
+version: '3.3'
 
 services:
   node:
     build:
       context: .
-      dockerfile: ./docker/node/Dockerfile
+      dockerfile: docker/node/Dockerfile
     restart: always
     ports:
       - ${PORT}:${PORT}
     depends_on:
       - database
+    command: "sh /run.sh"
+    volumes:
+      - ./:/usr/src/app
+      - ./run.sh:/run.sh
   database:
     build:
       context: .
@@ -22,4 +26,4 @@ services:
     env_file:
       - .env
     ports:
-      - ${DB_PORT}:5432
+      - ${POSTGRES_PORT}:5432
