WEEK-7. Update config

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ POSTGRES_USER=set_username
 POSTGRES_PASSWORD=set_password
 POSTGRES_PORT=5432
 POSTGRES_HOST=database
+
+POSTGRES_DEFAULT_PORT=5432
