--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,4 +26,6 @@ services:
     env_file:
       - .env
     ports:
-      - ${POSTGRES_PORT}:5432
+      - ${POSTGRES_PORT}:${POSTGRES_DEFAULT_PORT}
+    volumes:
+      - ./postgres:/var/lib/postgresql
