--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ PORT=4000
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
-TOKEN_EXPIRE_TIME=1h
-TOKEN_REFRESH_EXPIRE_TIME=24h
+TOKEN_EXPIRE_TIME=3600
+TOKEN_REFRESH_EXPIRE_TIME=86400
 
 POSTGRES_DB=set_db_name
 POSTGRES_USER=set_username
