--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '3.9'
 
 services:
   node:
@@ -14,6 +14,9 @@ services:
     volumes:
       - ./:/usr/src/app
       - ./run.sh:/run.sh
+    networks:
+      - common
+
   database:
     build:
       context: .
@@ -29,3 +32,9 @@ services:
       - ${POSTGRES_PORT}:${POSTGRES_DEFAULT_PORT}
     volumes:
       - ./postgres:/var/lib/postgresql
+    networks:
+      - common
+
+networks:
+  common:
+    driver: bridge
